# rust-woerterbuch

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
.project/agents/: AGENTS.md  repository.md  update-ai-config-files.sh
.project/tasks/: 2026-06-09--openthesaurus-parser.md  2026-06-12--output-layout-naming-and-spacing.md  beispiel-output--Bank.el  example-output-markdown--by-section.md  example-output-markdown--by-source.md  template.md  todo.md
.project/tasks/archive/: 2026-06-09--duden-parser.md  2026-06-09--dwds-parser.md  2026-06-09--wiktionary-parser.md  2026-06-11--human-output-statuses.md  2026-06-11--section-filtering-semantics.md  2026-06-12--fix-duden-umlaute.md  2026-06-12--fix-remaining-clippy-warnings.md  2026-06-12--json-layout-org-labels-and-max-examples.md  2026-06-12--refresh-source-fixtures-and-json-expected-output.md  2026-06-13--add-timestamps-headers-output-formats.md  2026-06-13--human-format-single-quotes.md  2026-06-13--omit-redundant-single-entry-headings.md  2026-06-14--format-examples-as-heading.md  (+1 more)
emacs-lisp/lisp/: woerterbuch-core.el  woerterbuch-duden.el  woerterbuch-dwds.el  woerterbuch-openthesaurus.el  woerterbuch-wiktionary.el  woerterbuch.el
emacs-lisp/tests/: test-helper.el  test-woerterbuch-duden.el  test-woerterbuch-dwds.el  test-woerterbuch-openthesaurus.el  test-woerterbuch-wiktionary.el  test-woerterbuch.el
src/: format.rs  http.rs  lib.rs  main.rs  models.rs  orthography.rs  sources.rs
src/sources/: duden.rs  dwds.rs  openthesaurus.rs  wiktionary.rs
(+262 files in other folders)
