[package]
name = "rust-woerterbuch"
version = "0.1.0"
edition = "2021"
description = "Async Rust CLI for German dictionary lookups"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli", "deflate"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
urlencoding = "2"

[dev-dependencies]
pretty_assertions = "1"

[[bin]]
name = "woerterbuch"
path = "src/main.rs"
